@@ -3,3 +3,5 @@ source "https://rubygems.org"
 gem 'sinatra'
 gem 'sinatra-contrib'
 gem 'erubis'
+
+gem 'minitest'
