@@ -1,1 +1,12 @@
-# changes.txt
+1993 - Yukihiro Matsumoto dreams up Ruby.
+1995 - Ruby 0.95 released.
+1996 - Ruby 1.0 released.
+1998 - Ruby 1.2 released.
+1999 - Ruby 1.4 released.
+2000 - Ruby 1.6 released.
+2003 - Ruby 1.8 released.
+2007 - Ruby 1.9 released.
+2013 - Ruby 2.0 released.
+2013 - Ruby 2.1 released.
+2014 - Ruby 2.2 released.
+2015 - Ruby 2.3 released.
